fixes product price overflow style bug

--- a/src/components/product/Product.css
+++ b/src/components/product/Product.css
@@ -138,7 +138,7 @@
   font-size: 18px;
   line-height: 21px;
   color: #000000;
-  width: 65px;
+  min-width: 65px;
 }
 
 @media screen and (max-width: 599px) {
